Fix image cropping issues - display full images

--- a/style.css
+++ b/style.css
@@ -719,14 +719,16 @@ img {
 
 .project-image {
     width: 100%;
+    height: auto;
     margin: 3rem 0;
     border-radius: 8px;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .project-image img {
     width: 100%;
     height: auto;
+    object-fit: unset;
     display: block;
 }
 
